# archon-vm

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
resources/frontend/parser_tests/: case_int.input.txt  (+32 more)
resources/transpiler_tests/: factorial.input.txt  factorial.output.txt  high_level_function.output.txt  immediate_redex.input.txt  immediate_redex.output.txt  lambda.input.txt  lambda.output.txt  lambda_as_arg.output.txt  local_vars_with_same_name.input.txt  local_vars_with_same_name.output.txt  mem_access.input.txt  mem_access.output.txt  nested_redex.output.txt  partial_primitive_call.output.txt  return_computation.input.txt  return_computation.output.txt  simple.output.txt  simple_expression.input.txt  simple_expression.output.txt  thunk.input.txt  thunk.output.txt
runtime/: Cargo.toml
runtime/src/: debug_helper.rs  lib.rs  runtime.rs  runtime_utils.rs  types.rs  utils.rs
src/: compiler.rs  error.rs  free_var.rs  lambda_lifter.rs  lib.rs  main.rs  parser.rs  primitive_functions.rs  signature.rs  term.rs  test_utils.rs  transformer.rs  transpiler.rs  u_term.rs  visitor.rs
src/ast/: free_var.rs  mod.rs  primitive_functions.rs  signature.rs  term.rs  transformer.rs  visitor.rs
src/backend/: common.rs  compiler.rs  cps_function_translator.rs  function_analyzer.rs  function_translator.rs  mod.rs  pure_function_translator.rs  simple_function_translator.rs
src/clir/: common.rs  compiler.rs  function_translator.rs
src/cranelift/: compiler.rs  function_translator.rs
src/frontend/: f_term.rs  mod.rs  parser.rs  transpiler.rs  u_term.rs
(+135 files in other folders)
