[package]
name = "cbpv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11.2", features = ["macros"] }
either = "1.9.0"
nom = "7.1.3"
nom_locate = "4.2.0"
cranelift = "0.101.3"
cranelift-module = "0.101.3"
cranelift-jit = "0.101.3"
cranelift-native = "0.101.3"
cranelift-object = "0.101.3"
cbpv-runtime = { path = "runtime" }
strum = "0.25.0"
strum_macros = "0.25.3"
enum-map = "2.7.0"
