[package]
name = "archon-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11.2", features = ["macros"] }
either = "1.9.0"
nom = "7.1.3"
nom_locate = "4.2.0"
cranelift = "0.109.0"
cranelift-module = "0.109.0"
cranelift-jit = "0.109.0"
cranelift-native = "0.109.0"
cranelift-object = "0.109.0"
archon-vm-runtime = { path = "runtime" }
strum = "0.25.0"
strum_macros = "0.25.3"
enum-map = "2.7.3"
home = "0.5.9"
itertools = "0.12.0"
enum-ordinalize = "4.3.0"

[profile.dev]
opt-level = 0